Only uses URI (instead of URL), and add the method setLanguage().