@@ -9,7 +9,7 @@
  * later version.
  *
  * OrbisToolBox is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
- * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for moredetails.
+ * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License along with OrbisToolBox. If not, see
  * <http://www.gnu.org/licenses/>.
@@ -22,10 +22,8 @@ package org.orbisgis.orbistoolbox.process;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -41,8 +39,8 @@ public class InputTest {
      * Tests if the constructor with a null title returns an IllegalArgumentException.
      */
     @Test(expected = IllegalArgumentException.class)
-    public final void nullTitleConstructorTest() throws URISyntaxException, MalformedURLException {
-        Format f = new Format("test", new URL("http://orbisgis.org"));
+    public final void nullTitleConstructorTest() throws URISyntaxException {
+        Format f = new Format("test", new URI("http://orbisgis.org"));
         f.setDefaultFormat(true);
         new Input(null, new URI("test"), new RawData(f));
     }
@@ -51,8 +49,8 @@ public class InputTest {
      * Tests if the constructor with a null identifier returns an IllegalArgumentException.
      */
     @Test(expected = IllegalArgumentException.class)
-    public final void nullURIConstructorTest() throws MalformedURLException {
-        Format f = new Format("test", new URL("http://orbisgis.org"));
+    public final void nullURIConstructorTest() throws URISyntaxException {
+        Format f = new Format("test", new URI("http://orbisgis.org"));
         f.setDefaultFormat(true);
         new Input("test", null, new RawData(f));
     }
@@ -86,8 +84,8 @@ public class InputTest {
      * Tests if the constructor with a input list containing a null input returns an IllegalArgumentException.
      */
     @Test(expected = IllegalArgumentException.class)
-    public final void containingNullInputConstructorTest() throws URISyntaxException, MalformedURLException {
-        Format f = new Format("test", new URL("http://orbisgis.org"));
+    public final void containingNullInputConstructorTest() throws URISyntaxException {
+        Format f = new Format("test", new URI("http://orbisgis.org"));
         f.setDefaultFormat(true);
         Input input = new Input("test", new URI("test"), new RawData(f));
         List<Input> nullList = new ArrayList<>();
@@ -100,8 +98,8 @@ public class InputTest {
      * Tests if setting the input list sets the data description to null.
      */
     @Test()
-    public final void setInputTest() throws URISyntaxException, MalformedURLException {
-        Format f = new Format("test", new URL("http://orbisgis.org"));
+    public final void setInputTest() throws URISyntaxException {
+        Format f = new Format("test", new URI("http://orbisgis.org"));
         f.setDefaultFormat(true);
         Input input1 = new Input("test", new URI("test"), new RawData(f));
         Input input2 = new Input("test", new URI("test"), new RawData(f));
@@ -119,8 +117,8 @@ public class InputTest {
      * Tests if setting the data description sets the input list to null.
      */
     @Test()
-    public final void setDataDescriptionTest() throws URISyntaxException, MalformedURLException {
-        Format f = new Format("test", new URL("http://orbisgis.org"));
+    public final void setDataDescriptionTest() throws URISyntaxException {
+        Format f = new Format("test", new URI("http://orbisgis.org"));
         f.setDefaultFormat(true);
         Input input = new Input("test", new URI("test"), new RawData(f));
 
@@ -135,8 +133,8 @@ public class InputTest {
      * Tests if setting false occurrence value do not break the Input.
      */
     @Test()
-    public final void setOccurrenceTest() throws URISyntaxException, MalformedURLException {
-        Format f = new Format("test", new URL("http://orbisgis.org"));
+    public final void setOccurrenceTest() throws URISyntaxException {
+        Format f = new Format("test", new URI("http://orbisgis.org"));
         f.setDefaultFormat(true);
         Input input = new Input("test", new URI("test"), new RawData(f));
 
